--- a/pom.xml
+++ b/pom.xml
@@ -3,9 +3,10 @@
     
     <groupId>de.xcraft.engelier</groupId>
     <artifactId>XcraftGate</artifactId>
-    <version>1.13.0</version>
+    <version>2.0.0</version>
     
     <name>XcraftGate</name>
+    <url>https://github.com/Salami555/XcraftGate</url>
     
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
